// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stepList > renders correctly  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1g1au380"
    >
      <li
        class="styles__1g1au381 styles_disabled_false__1g1au382"
      >
        <div
          class="styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_2__1jy42m0h"
        >
          1
        </div>
        <div
          class="styles__1g1au384 styles_size_medium__1g1au385"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`stepList > renders correctly with bulletContent & sentiment 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1g1au380"
    >
      <li
        class="styles__1g1au381 styles_disabled_false__1g1au382"
      >
        <div
          class="styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_3__1jy42m0i"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircle
            </title>
            <path
              clip-rule="evenodd"
              d="M8.0001 2.76373C5.10813 2.76373 2.76373 5.10813 2.76373 8.0001C2.76373 10.8921 5.10813 13.2365 8.0001 13.2365C10.8921 13.2365 13.2365 10.8921 13.2365 8.0001C13.2365 5.10813 10.8921 2.76373 8.0001 2.76373ZM1.6001 8.0001C1.6001 4.46548 4.46548 1.6001 8.0001 1.6001C11.5347 1.6001 14.4001 4.46548 14.4001 8.0001C14.4001 11.5347 11.5347 14.4001 8.0001 14.4001C4.46548 14.4001 1.6001 11.5347 1.6001 8.0001ZM8.0001 5.47889C8.32143 5.47889 8.58192 5.73937 8.58192 6.0607V8.48495C8.58192 8.80628 8.32143 9.06676 8.0001 9.06676C7.67877 9.06676 7.41828 8.80628 7.41828 8.48495V6.0607C7.41828 5.73937 7.67877 5.47889 8.0001 5.47889ZM7.41828 10.4243C7.41828 10.103 7.67877 9.84252 8.0001 9.84252H8.00495C8.32628 9.84252 8.58676 10.103 8.58676 10.4243V10.4292C8.58676 10.7505 8.32628 11.011 8.00495 11.011H8.0001C7.67877 11.011 7.41828 10.7505 7.41828 10.4292V10.4243Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="styles__1g1au384 styles_size_medium__1g1au385"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`stepList > renders correctly with bulletContent 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1g1au380"
    >
      <li
        class="styles__1g1au381 styles_disabled_false__1g1au382"
      >
        <div
          class="styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_2__1jy42m0h"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircle
            </title>
            <path
              clip-rule="evenodd"
              d="M8.0001 2.76373C5.10813 2.76373 2.76373 5.10813 2.76373 8.0001C2.76373 10.8921 5.10813 13.2365 8.0001 13.2365C10.8921 13.2365 13.2365 10.8921 13.2365 8.0001C13.2365 5.10813 10.8921 2.76373 8.0001 2.76373ZM1.6001 8.0001C1.6001 4.46548 4.46548 1.6001 8.0001 1.6001C11.5347 1.6001 14.4001 4.46548 14.4001 8.0001C14.4001 11.5347 11.5347 14.4001 8.0001 14.4001C4.46548 14.4001 1.6001 11.5347 1.6001 8.0001ZM8.0001 5.47889C8.32143 5.47889 8.58192 5.73937 8.58192 6.0607V8.48495C8.58192 8.80628 8.32143 9.06676 8.0001 9.06676C7.67877 9.06676 7.41828 8.80628 7.41828 8.48495V6.0607C7.41828 5.73937 7.67877 5.47889 8.0001 5.47889ZM7.41828 10.4243C7.41828 10.103 7.67877 9.84252 8.0001 9.84252H8.00495C8.32628 9.84252 8.58676 10.103 8.58676 10.4243V10.4292C8.58676 10.7505 8.32628 11.011 8.00495 11.011H8.0001C7.67877 11.011 7.41828 10.7505 7.41828 10.4292V10.4243Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="styles__1g1au384 styles_size_medium__1g1au385"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`stepList > renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1g1au380"
    >
      <li
        class="styles__1g1au381 styles_disabled_true__1g1au383"
      >
        <div
          class="styles__1jy42m00 styles_disabled_true__1jy42m01 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              Check
            </title>
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <div
          class="styles__1g1au384 styles_size_medium__1g1au385"
        >
          <div>
            Item 1 with disabled state
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`stepList > renders correctly with disabled state 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1g1au380"
    >
      <li
        class="styles__1g1au381 styles_disabled_true__1g1au383"
      >
        <div
          class="styles__1jy42m00 styles_disabled_true__1jy42m01 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b"
        >
          1
        </div>
        <div
          class="styles__1g1au384 styles_size_medium__1g1au385"
        >
          <div>
            Item 1 with disabled state
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`stepList > renders correctly with small size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1g1au380"
    >
      <li
        class="styles__1g1au381 styles_disabled_false__1g1au382"
      >
        <div
          class="styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_small__1jy42m0c styles_undefined_compound_2__1jy42m0h"
        >
          1
        </div>
        <div
          class="styles__1g1au384 styles_size_small__1g1au386"
        >
          Item 1 small
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
